--- a/blog.html
+++ b/blog.html
@@ -1,38 +1,55 @@
 <html><head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link class="main_style" rel="stylesheet" href="style.css">
     <title>Underdisc</title>
   </head>
   <body>
+    <div class="left_accent_grid">
+      <div></div>
+      <div class="accent"></div>
+    </div>
     <div class="main_grid">
       <div class="header_container">
+        <div class="header_dropdown_container">
+          <div class="header_dropdown">
+            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 26.5 26.5">
+              <path fill="#fff" d="M13.2 0A13.2 13.2 0 000 13.2a13.2 13.2 0 0013.2 13.3 13.2 13.2 0 0013.3-13.3A13.2 13.2 0 0013.2 0zm-2.6 5.3h5.3v9.3h5.3l-8 7.9-8-8h5.4z" paint-order="stroke markers fill"/>
+            </svg>
+          </div>
+        </div>
         <div class="header_text">
           Underdisc
         </div>
-        <div class="header_dropdown_button">
-        </div>
+        <div></div>
       </div>
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
-        <a class="sidebar_element" href="index.html">
+        <a class="sidebar_element index_link" href="index.html">
           Home
         </a>
-        <a class="sidebar_element" href="blog.html">
+        <a class="sidebar_element blog_link" href="blog.html">
           Blog
         </a>
-        <a class="sidebar_element" href="portfolio.html">
+        <a class="sidebar_element portfolio_link" href="portfolio.html">
           Portfolio
         </a>
-        <a class="sidebar_element" href="contact.html">
+        <a class="sidebar_element contact_link" href="contact.html">
           Contact
         </a>
       </div>
       <div class="content_container">
-      <div class="page_content"><h2 id="blog">Blog</h2></div></div>
+      <div class="page_content"><h3 id="blog">Blog</h3>
+<h1 id="learningmoreaboutwebdevelopmentbloglearning_more_about_web_developmenthtml"><a href="blog/learning_more_about_web_development.html">Learning More About Web Development</a></h1>
+<p>20-07-23 - After leaving my job, my first task has been completely overhauling my website to what it is now. This is about that and some of the things I learned about web developlment along the way.</p>
+<hr></div></div>
+    </div>
+    <div class="right_accent_grid">
+      <div class="accent"></div>
+      <div></div>
     </div>
   
-  <script type="text/javascript" src="main.js"></script>
+  <script class="main_script" type="text/javascript" src="main.js"></script>
 
 
 </body></html>
