--- a/index.html
+++ b/index.html
@@ -1,30 +1,40 @@
 <html><head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link class="main_style" rel="stylesheet" href="style.css">
     <title>Underdisc</title>
   </head>
   <body>
+    <div class="left_accent_grid">
+      <div></div>
+      <div class="accent"></div>
+    </div>
     <div class="main_grid">
       <div class="header_container">
+        <div class="header_dropdown_container">
+          <div class="header_dropdown">
+            <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 26.5 26.5">
+              <path fill="#fff" d="M13.2 0A13.2 13.2 0 000 13.2a13.2 13.2 0 0013.2 13.3 13.2 13.2 0 0013.3-13.3A13.2 13.2 0 0013.2 0zm-2.6 5.3h5.3v9.3h5.3l-8 7.9-8-8h5.4z" paint-order="stroke markers fill"/>
+            </svg>
+          </div>
+        </div>
         <div class="header_text">
           Underdisc
         </div>
-        <div class="header_dropdown_button">
-        </div>
+        <div></div>
       </div>
       <div class="sidebar_grid">
         <!-- We have one empty element that acts as padding. -->
         <div></div>
-        <a class="sidebar_element" href="index.html">
+        <a class="sidebar_element index_link" href="index.html">
           Home
         </a>
-        <a class="sidebar_element" href="blog.html">
+        <a class="sidebar_element blog_link" href="blog.html">
           Blog
         </a>
-        <a class="sidebar_element" href="portfolio.html">
+        <a class="sidebar_element portfolio_link" href="portfolio.html">
           Portfolio
         </a>
-        <a class="sidebar_element" href="contact.html">
+        <a class="sidebar_element contact_link" href="contact.html">
           Contact
         </a>
       </div>
@@ -33,8 +43,12 @@
 <p>It seems as though you have found my small corner of the internet. Thanks for stopping by. I am Underdisc, a programmer by trade, but a strange amalgamation of programmer and other things by nature.</p>
 <p>This website is intended to act as a place that allows me to share what I have done and what I am currently doing. It is not made with the goal to get hired. It is made as a place where I can express myself and tell others all the things I am excited about. Feel free to stop by whenever you wish. I hope there are things I have written or shared that excite you just as much as they excite me.</p></div></div>
     </div>
+    <div class="right_accent_grid">
+      <div class="accent"></div>
+      <div></div>
+    </div>
   
-  <script type="text/javascript" src="main.js"></script>
+  <script class="main_script" type="text/javascript" src="main.js"></script>
 
 
 </body></html>
