--- a/projects/index.html
+++ b/projects/index.html
@@ -38,7 +38,12 @@
         </a>
       </div>
       <div class="content_container">
-      <div class="page_content"><h1>Projects</h1></div></div>
+      <div class="page_content"><h1>Projects</h1>
+<p>Below is a list of a large majority of the projects I have worked on. Each project has a small description below it and the link can be followed to find out more about the project and my contributions to it.</p>
+<hr>
+<h3><a href="varkor.html">Varkor</a></h3>
+<p>A custom game engine I plan to use for my future projects and I hope to use for more than just games. This is what I am currently working on.</p>
+<hr></div></div>
     </div>
     <div class="right_accent_grid">
       <div class="accent"></div>
